# llm-sft-grpo

./: .gitignore  README.md  pyproject.toml
tictactoe/grpo/: modal_app.py  modal_app_sft_grpo.py  tic_tac_toe.py
tictactoe/sft/: game_play.py  inference.py
