[project]
name = "multi-turn-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "modal>=0.75.7",
    "numpy==1.26.4",
    "openai>=1.74.0",
    "openpipe>=4.50.0",
    "openpipe-art>=0.3.5",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "torch>=2.5.1",
]
